--- a/HISTORY
+++ b/HISTORY
@@ -1,10 +1,16 @@
 CHANGELOG
 =========
 
+0.1.0 (2017-09-20)
+------------------
+
+* Inline SVGs
+* Some minor fixes to the Italian localization
+
 0.0.2 (2017-09-05)
 ------------------
 
-* added a class name in the template
+* Added a class name in the template
 * Italian localization
 
 0.0.1 (2017-09-05)
