--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+0.2.0 (2018-03-27)
+------------------
+
+* Links on SVG images
+
 0.1.0 (2017-09-20)
 ------------------
 
