Update the Italian localization

--- a/ripiu/cmsplugin_filer_svg/locale/it/LC_MESSAGES/django.po
+++ b/ripiu/cmsplugin_filer_svg/locale/it/LC_MESSAGES/django.po
@@ -1,60 +1,102 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# ripiu.cmsplugin_filer_svg Italian localization.
+# Copyright (C) 2018 Studio Ri+
+# This file is distributed under the same license as the
+# ripiu.cmsplugin_filer_svg package.
+# matteo vezzola <matteo@studioripiu.it>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-20 21:32+0200\n"
+"POT-Creation-Date: 2018-03-27 12:53+0200\n"
 "PO-Revision-Date: 2017-09-20 21:29+0200\n"
-"Last-Translator: \n"
+"Last-Translator: geobaldi\n"
 "Language-Team: \n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.3\n"
 
-#: ripiu/cmsplugin_filer_svg/apps.py:9 ripiu/cmsplugin_filer_svg/models.py:54
+#: ripiu/cmsplugin_filer_svg/apps.py:9 ripiu/cmsplugin_filer_svg/models.py:105
 msgid "SVG images"
 msgstr "Immagini SVG"
 
-#: ripiu/cmsplugin_filer_svg/cms_plugins.py:8
-#: ripiu/cmsplugin_filer_svg/models.py:34
+#: ripiu/cmsplugin_filer_svg/cms_plugins.py:11
+#: ripiu/cmsplugin_filer_svg/models.py:39
 msgid "Inline SVG image"
 msgstr "Immagine SVG in linea"
 
-#: ripiu/cmsplugin_filer_svg/cms_plugins.py:17
-#: ripiu/cmsplugin_filer_svg/models.py:53
+#: ripiu/cmsplugin_filer_svg/cms_plugins.py:22
+#: ripiu/cmsplugin_filer_svg/models.py:104
 msgid "SVG image"
 msgstr "Immagine SVG"
 
-#: ripiu/cmsplugin_filer_svg/models.py:12
+#: ripiu/cmsplugin_filer_svg/cms_plugins.py:34
+msgid "Link settings"
+msgstr "Impostazioni collegamento"
+
+#: ripiu/cmsplugin_filer_svg/models.py:16
 msgid "SVG file"
 msgstr "File SVG"
 
-#: ripiu/cmsplugin_filer_svg/models.py:13
+#: ripiu/cmsplugin_filer_svg/models.py:17
 msgid "Provide an SVG file"
 msgstr "Fornisci un file SVG"
 
-#: ripiu/cmsplugin_filer_svg/models.py:35
+#: ripiu/cmsplugin_filer_svg/models.py:40
 msgid "Inline SVG images"
 msgstr "Immagini SVG in linea"
 
-#: ripiu/cmsplugin_filer_svg/models.py:43
+#: ripiu/cmsplugin_filer_svg/models.py:49
+msgid "Open in new window"
+msgstr "Apri in una nuova finestra"
+
+#: ripiu/cmsplugin_filer_svg/models.py:50
+msgid "Open in same window"
+msgstr "Apri nella stessa finestra"
+
+#: ripiu/cmsplugin_filer_svg/models.py:51
+msgid "Delegate to parent"
+msgstr "Delega al genitore"
+
+#: ripiu/cmsplugin_filer_svg/models.py:52
+msgid "Delegate to top"
+msgstr "Delega alla radice"
+
+#: ripiu/cmsplugin_filer_svg/models.py:57
 msgid "alt text"
 msgstr "testo alternativo"
 
-#: ripiu/cmsplugin_filer_svg/models.py:45
+#: ripiu/cmsplugin_filer_svg/models.py:60
 msgid "width"
 msgstr "larghezza"
 
-#: ripiu/cmsplugin_filer_svg/models.py:47
+#: ripiu/cmsplugin_filer_svg/models.py:62
 msgid "height"
 msgstr "altezza"
 
-#~ msgid "django filer SVG"
-#~ msgstr "django filer SVG"
+#: ripiu/cmsplugin_filer_svg/models.py:66
+msgid "External URL"
+msgstr "Indirizzo esterno"
+
+#: ripiu/cmsplugin_filer_svg/models.py:69
+msgid "Wraps the image in a link to an external URL."
+msgstr "Inserisci l'immagine in un collegamento a un indirizzo esterno."
+
+#: ripiu/cmsplugin_filer_svg/models.py:73
+msgid "Internal URL"
+msgstr "Indirizzo interno"
+
+#: ripiu/cmsplugin_filer_svg/models.py:77
+msgid "Wraps the image in a link to an internal (page) URL."
+msgstr ""
+"Inserisci l'immagine in un collegamento all'indirizzodi una pagina interna."
+
+#: ripiu/cmsplugin_filer_svg/models.py:81
+msgid "Link target"
+msgstr "Target"
+
+#: ripiu/cmsplugin_filer_svg/models.py:88
+msgid "Link attributes"
+msgstr "Attributi del link"
