Add phone and email links
Took the code from djangocms_link

--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+0.2.1 (2018-03-27)
+------------------
+
+* Phone and email links
+
 0.2.0 (2018-03-27)
 ------------------
 
