--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+0.2.2 (2018-04-03)
+------------------
+
+* Removed a dependency on a nonexistent migration
+
 0.2.1 (2018-03-27)
 ------------------
 
